@@ -452,8 +452,10 @@ abstract class tx_egovapi_controller_pi1_abstractRenderer {
 							$services[] = $service;
 						}
 					}
-
 				}
+
+				// Force services to be always sorted by name
+				tx_egovapi_helpers_objects::sort($services, 'name');
 
 				// In most case there should be only one topic selected
 				// Give direct access to first one
