@@ -1,5 +1,7 @@
 2011-02-19  Xavier Perseguers  <xavier@causal.ch>
 
+	* Services are always alphabetically sorted (by name)
+	* Now sorting views, domains, topics and services in FlexForm
 	* Added enable flag to include services from swiss confederation
 	* Removed duplicate services when caching lifetime is extremely low
 	* Reorganized include for TYPO3 < 4.5
